--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 .tetris-bg-img {
-    background:url('img/tetrisback.png');  
+    background:url('assets/images/tetrisback.png');  
     background-size: 100%; 
     height: 100%
 }
